<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Contacts</string>
    <string name="name_of_application_string1">Welcome</string>
    <string name="name_of_application_string2">to</string>
    <string name="name_of_application_string3">contacts</string>
    <string name="action_settings">Settings</string>

    <!-- 1st Screen | Splash Screen -->
    <string name="enter_button">tap if you don\'t want to wait</string>

    <!-- 2nd Screen | Contacts List -->
    <string name="title_activity_contact_list">Contacts list</string>
    <string name="search_hint">Search by name or phone number</string>
    <string name="add_person_to_contacts">Add person to contacts</string>
    <string name="search_for_contacts">Search for contacts</string>
    <string name="no_result_for_search">no result</string>

    <!-- 3rd Screen | Contact details -->
    <string name="title_activity_contact_details">Contact details</string>
    <string name="edit_contacts">Edit contact</string>
    <string name="name_text_view">Name</string>
    <string name="phone_number_text_view">Phone number</string>
    <string name="text_view_email">Email</string>
    <string name="text_view_dob">Date of birth</string>
    <string name="text_view_address">Address</string>
    <string name="text_view_website">Website</string>
    <string name="button_call_text">Call</string>
    <string name="button_send_text">Send</string>
    <string name="button_look_text">Look</string>
    <string name="button_visit_text">Visit</string>
    <string name="address_is_empty">Sorry! Address is empty.</string>
    <string name="cannot_find_address">Cannot find the address, or there was an error.</string>

    <!-- 4th Screen | Edit contact -->
    <string name="title_activity_contact_edit">Edit contact</string>
    <string name="save_contact">Save changes</string>
    <string name="cancel_contact">Cancel editing</string>
    <string name="delete_contact">Delete</string>
    <string name="name_missing">Sorry! Name field is empty.</string>
    <string name="phone_number_missing">Sorry! Phone number field is empty.</string>
    <string name="contact_updated">Contact %1$s(%2$s) was updated.</string>
    <string name="delete_contact_confirmation">Delete contact</string>
    <string name="delete_contact_confirmation_question">Sure you want to delete %1$s(%2$s)?</string>
    <string name="contact_was_removed">Contact %1$s(%2$s) was removed.</string>

    <!-- 5th Screen | Add new contact -->
    <string name="title_activity_contact_add">Add a new contact</string>
    <string name="httpPrefixForWebsiteAddress">http://</string>
    <string name="httpsPrefixForWebsiteAddress">https://</string>
    <string name="name_and_phone_number_missing">Sorry! Name and phone number fields are empty</string>
    <string name="contact_added">Contact %1$s(%2$s) was added</string>

    <!-- 6th Screen | Map and weather -->
    <string name="title_activity_map_and_weather">Look up for address</string>
    <string name="more_than_one_address_found">Hm. There was more than one mAddress. We picked up the first.</string>
    <string name="weather_loading">Weather for location\n%1$s\nis loading...</string>
    <string name="weather_for_area_loading">Weather for the area is loading...</string>

    <!-- Test -->
    <string name="hello_weather">WEATHER</string>
    <string name="no_weather_data">Sorry!\nThere is no location found.</string>
    <string name="wind_speed">Wind speed</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="select_picture_string">Select picture</string>
    <string name="image_cannot_be_loaded">The selected image cannot be loaded.</string>
    <string name="cannot_crop_image">Sorry! But you can\'t crop image. No app found for this.</string>
    <string name="button_plan_meeting_text">Plan meeting</string>
    <string name="meeting_planning_title">Meeting with %1$s.</string>
    <string name="cannot_create_meeting">Cannot create meeting.\\nProbably you do not have the necessary app.</string>


</resources>
