<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.training.contactsapp.presentation.activity.ContactDetailsAndEditActivity">

    <item
        android:id="@+id/menu_item_save_contact"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save_contact"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_cancel_editing_contact"
        android:icon="@drawable/ic_action_cancel"
        android:title="@string/cancel_contact"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_delete_contact"
        android:title="@string/delete_contact"
        app:showAsAction="ifRoom"/>

</menu>
